--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "deploy": "gatsby build && gh-pages -d public"
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.22",
@@ -34,6 +35,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/react-helmet": "^6.1.5",
+    "gh-pages": "^4.0.0",
     "typescript": "^4.6.2",
     "url-parse": ">=1.5.9"
   }
