--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@types/react-dom": "^17.0.13",
     "@types/react-helmet": "^6.1.5",
     "gh-pages": "^4.0.0",
+    "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "typescript": "^4.6.2",
     "url-parse": ">=1.5.9"
   }
